# inventree-pimoroni

./: .gitmodules  README.md  pyproject.toml
inventree_pimoroni/: pimoroni.py  plugin.py
tests/: test_parser.py
tests/fixtures/: pimoroni_product.html
